# local-lattice

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  llms.txt  lmstudio_roles.json  middle_layer.py  middle_layer.py.corrupted-backup  middle_layerMLX.py  mlx_dashboard.py  mlx_roles.json  model_profiles.json  pyproject.toml  requirements-mlx-gateway.txt  requirements-mlx.txt  run_middle_layer_mlx.sh  run_with_venv.sh  setup_mlx.sh  start_middle_layer.sh  start_middle_layerMLX.sh  start_middle_layerMLX_5001_stable.sh
.github/workflows/: ci.yml  release.yml
dashboard/: app.js  index.html
docs/: capabilities.md  why-lattice.md
docs/_internal/: CURRENT_STATE.md  RISK_REGISTER.md
docs/_internal/baseline/: 01_healthz_unauth.txt  02_v1_models_unauth.txt  03_healthz_authed.txt  04_v1_models_authed.txt  05_swarm_models.txt  06_dash_snapshot_cold.txt  07_dash_config.txt  08_dash_html.txt  09_bearer_auth.txt  10_options_preflight.txt  11_chat_nonstream.txt  12_chat_stream.txt  13_completions.txt  14_chat_bad_alias_fallback.txt  15_chat_role_fast.txt  16_swarm_fanout.txt  17_swarm_vote.txt  18_swarm_pipeline.txt  19_swarm_debate.txt  20_dash_snapshot_warm.txt  21_dash_preferences_post.txt  22_unload_model.txt  23_chat_latency_header.txt  24_chat_unauth.txt  25_chat_query_apikey.txt  26_chat_oversize_prompt.txt  27_dash_snapshot_final.txt  README.md
docs/integrations/: README.md  langgraph.md  openai-agents-sdk.md
middle_layer/: __init__.py  bootstrap.py  cli.py  cloud_escalation.py  lmstudio_client.py  lmstudio_routes.py  resolver.py  security.py  swarm.py  timing.py
scripts/: demo.sh  start.sh  swarm_eval.py  swarm_eval_dataset.jsonl
tests/: _helpers.py  conftest.py  test_bootstrap.py  test_cloud_escalation_module.py  test_concurrency.py  test_lmstudio_client_module.py  test_mlx_admission.py  test_mlx_boot.py  test_mlx_discovery.py  test_mlx_grab.py  test_mlx_health.py  test_mlx_loader.py  test_oom_classification.py  test_resolver.py  test_resolver_module.py  test_security.py  test_smoke.py  test_swarm_e2e.py  test_swarm_errors.py  test_swarm_intents.py  test_timing.py
